# conference-website

./: .gitignore  example.env.local  netlify.toml  package-lock.json  package.json
.github/workflows/: deploy-pretalx-digitalocean.yml  sync-pretalx-schedule.yml
app/: home-page.tsx
app/cfp/: page.tsx
app/meetups/: constants.ts  meetups-page.tsx  types.ts
app/meetups/components/: AnimatedArchitecture.tsx  (+5 more)
components/Dropdown/: dropdown.stories.tsx
components/Guidelines/: guidelines.tsx
components/Header/: header.tsx
components/Navbar/: navDrop.tsx  navbar.tsx
config/: conference-data.ts  editions.json  links.json  navigation.ts  pretalx.ts
config/pretalx/: agenda.json  city-lists.json  speakers.json
cypress/e2e/: Landing.cy.ts  Navbar.cy.ts  Venue.cy.ts
deploy/pretalx/: .env.example  DEV.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  nginx-container.conf  nginx.conf.template  pretalx.cfg.template
deploy/pretalx/plugins/pretalx_asyncapi_cfp/: pyproject.toml
deploy/pretalx/plugins/pretalx_asyncapi_cfp/pretalx_asyncapi_cfp/: __init__.py  api.py  apps.py  forms.py  urls.py  views.py
deploy/pretalx/plugins/pretalx_asyncapi_cfp/pretalx_asyncapi_cfp/templates/pretalx_asyncapi_cfp/: location_settings.html
pages/: index.tsx
pages/cfp/: index.tsx
pages/venue/: [id].tsx
scripts/: cfp-deadline.test.mjs  pretalx-plugin.test.mjs  sync-pretalx-schedule.mjs  sync-pretalx-schedule.test.mjs
scripts/fixtures/: pretalx-events.json  pretalx-schedule-latest.json
types/: types.ts
utils/: cfp-deadline.js  pretalx.ts
(+9 files in other folders)
